# learn_sdl

./: .clangd  CMakeLists.txt  README.md
src/: LTexture.cpp  LTexture.h  main.cpp
